export const snapshot = {};

snapshot[`Issue View Command - Help Text 1`] = `
stdout:
"
\\x1b[1mUsage:\\x1b[22m \\x1b[95mview \\x1b[33m[\\x1b[95m\\x1b[95missueId\\x1b[95m\\x1b[33m]\\x1b[95m\\x1b[39m

\\x1b[1mDescription:\\x1b[22m

  View issue details (default) or open in browser/app

\\x1b[1mOptions:\\x1b[22m

  \\x1b[94m-h\\x1b[39m, \\x1b[94m--help\\x1b[39m     \\x1b[31m\\x1b[1m-\\x1b[22m\\x1b[39m Show this help.                   
  \\x1b[94m-w\\x1b[39m, \\x1b[94m--web\\x1b[39m      \\x1b[31m\\x1b[1m-\\x1b[22m\\x1b[39m Open in web browser               
  \\x1b[94m-a\\x1b[39m, \\x1b[94m--app\\x1b[39m      \\x1b[31m\\x1b[1m-\\x1b[22m\\x1b[39m Open in Linear.app                
  \\x1b[94m--no-comments\\x1b[39m  \\x1b[31m\\x1b[1m-\\x1b[22m\\x1b[39m Exclude comments from the output  

"
stderr:
""
`;

snapshot[`Issue View Command - With Issue ID 1`] = `
stdout:
"Error: error sending request for url (http://127.0.0.1:3000/graphql): client error (Connect): tcp connect error: Connection refused: Connection refused
"
stderr:
"✗ Failed to fetch issue details
"
`;

snapshot[`Issue View Command - With Mock Server Terminal No Comments 1`] = `
stdout:
"# Fix authentication bug in login flow

Users are experiencing issues logging in when their session expires. This affects the main authentication flow and needs to be resolved quickly.

## Steps to reproduce
1. Log in to the application
2. Wait for session to expire
3. Try to perform an authenticated action
4. Observe the error

## Expected behavior
User should be redirected to login page with clear messaging.

## Actual behavior
User sees cryptic error message and gets stuck.

## Comments

*No comments found for this issue.*


"
stderr:
""
`;

snapshot[`Issue View Command - With No Comments Flag 1`] = `
stdout:
"# Fix authentication bug in login flow

Users are experiencing issues logging in when their session expires.
"
stderr:
""
`;

snapshot[`Issue View Command - With Comments Default 1`] = `
stdout:
"# Fix authentication bug in login flow

Users are experiencing issues logging in when their session expires.

## Comments

- **@Bob Senior** - *1/15/2024*

  Should we also consider implementing automatic session refresh?

- **@John Doe** - *1/15/2024*

  I've reproduced this issue on staging. The session timeout seems to be too aggressive.

  - **@Jane Smith** - *1/15/2024*

    Working on a fix. Will increase the session timeout and add proper error handling.

  - **@Alice Developer** - *1/15/2024*

    Sounds good! Also, we should add better error messaging for expired sessions.


"
stderr:
""
`;

snapshot[`Issue View Command - Issue Not Found 1`] = `
stdout:
'Error: Issue not found: TEST-999: {"response":{"errors":[{"message":"Issue not found: TEST-999","extensions":{"code":"NOT_FOUND"}}],"status":200,"headers":{}},"request":{"query":"query GetIssueDetailsWithComments(\$id: String!) {\\\\n  issue(id: \$id) {\\\\n    title\\\\n    description\\\\n    url\\\\n    branchName\\\\n    comments(first: 50, orderBy: createdAt) {\\\\n      nodes {\\\\n        id\\\\n        body\\\\n        createdAt\\\\n        user {\\\\n          name\\\\n          displayName\\\\n        }\\\\n        externalUser {\\\\n          name\\\\n          displayName\\\\n        }\\\\n        parent {\\\\n          id\\\\n        }\\\\n      }\\\\n    }\\\\n  }\\\\n}","variables":{"id":"TEST-999"}}}
'
stderr:
"✗ Failed to fetch issue details
"
`;
